# Production-LLM-FAQ-Service

./: Makefile  WRITEUP.md  pyproject.toml
data/: cost_log.jsonl  golden_test_set.csv  negative_test_set.csv  products-template.md
data/chroma/: chroma.sqlite3
data/inbox/: my_valid_product.json
data/inbox-templates/: bad.json
data/products/: prod_001_selkirk_amped.json  prod_002_joola_hyperion.json  prod_003_engage_pursuit.json  prod_004_franklin_signature.json  prod_005_head_radical.json  prod_006_paddletek_bantam.json  prod_007_selkirk_vanguard.json  prod_008_franklin_x40.json  prod_009_onix_pure2.json  prod_010_dura_fast40.json  prod_011_franklin_tour.json  prod_012_selkirk_team_bag.json  prod_013_franklin_sling.json  prod_014_joola_tour_bag.json  prod_015_diadem_warrior_tee.json  prod_016_lija_skort.json  prod_017_head_performance_cap.json  prod_018_engage_shorts.json  prod_019_gamma_grip_wrap.json  prod_020_tourna_lead_tape.json  prod_021_pbpro_net_system.json  prod_022_fila_volley_zone.json  prod_023_kswiss_express_light.json  prod_024_asics_gel_renma.json  prod_025_gamma_ball_hopper.json  prod_026_11six24_monarch.json  prod_027_joola_perseus_3s.json  prod_028_bread_butter_filth.json  prod_029_chorus_shapeshifter_sx.json  prod_030_enhance_gen_4_5.json  prod_030_supersmash.jso  prod_031_supersmash.json  prod_032_supersmash.jso  prod_033_supersmash.json  prod_034_supersmash.json
scripts/: cost_report.py  eval_llm_judge.py  eval_topk_sweep.py  harvest_evidence.py  load_data.py  run_eval.py  seed_cost_log.py  seed_traces.py  show_traces.py  start_watcher.py  tune_factuality_threshold.py  verify_capstone.py
src/: __init__.py  config.py  models.py  pricing.py
src/cache/: __init__.py  semantic.py  wrapper.py
src/cost/: __init__.py  dashboard.py  tracker.py
src/evaluation/: __init__.py  run_eval.py
src/gateway/: __init__.py  app.py  classifier.py  router.py  routes.py
src/guardrails/: __init__.py  input_guards.py  output_guards.py  wrapper.py
src/ingestion/: __init__.py  watcher.py
src/optimization/: __init__.py  routes.py  streaming.py
src/rag/: __init__.py  generator.py  pipeline.py  retriever.py
src/tracing/: __init__.py  base.py  noop_backend.py  phoenix_backend.py  trace_export.py
tests/: conftest.py
(+16 files in other folders)
