[project]
name = "llm-ops-project"
version = "0.1.0"
description = "Production LLM FAQ Service — Udacity nd907 Course 2 Capstone"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-dotenv>=1.0,<2",
    "chromadb>=0.5,<1",
    "openai>=1.30,<3",
    "tiktoken>=0.7,<1",
    "ragas==0.4.3",
    # Direct dep used by src/evaluation/run_eval.py to wrap an OpenAI
    # embeddings client for RAGAS. Already a transitive dep via
    # langchain — declared here because we import from it.
    "langchain-openai>=1.0,<2",
    "llm-guard>=0.3,<1",
    # spaCy English NER model — Presidio (which llm-guard's Anonymize
    # wraps) uses spaCy as its tokenization / sentence-segmentation
    # backbone, regardless of which transformer recognizer is configured.
    # Declared as a URL-pinned wheel so `uv sync` keeps it in the
    # lockfile instead of pruning it as extraneous. Without it, any
    # unrelated dep change followed by `uv sync` silently breaks the
    # live /query route. Version must track spaCy's major version
    # (3.x); bump together. Do not add other languages here without a
    # caller in src/.
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "watchdog>=4.0,<7",
    "jinja2>=3.1,<4",
    # Phoenix 14+ conflicts with llm-guard via cryptography (>=45 vs <44.1).
    # Phoenix 13.21 needs the old phoenix.evals.models layout, which exists
    # only in arize-phoenix-evals<3 — pin both together.
    "arize-phoenix>=13.21,<14",
    "arize-phoenix-evals>=0.20,<3",
    "arize-phoenix-otel>=0.16,<1",
    "openinference-instrumentation-openai>=0.1,<1",
    # arize-phoenix imports pytz in phoenix/datetime_utils.py without
    # declaring it — keep pinned until upstream fixes the metadata.
    "pytz>=2026.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "httpx>=0.27,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
